<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="action_settings">sfsdg</string>
    <string name="already_login">Already Logged In</string>
    <string name="app_name">太阳系争夺战3·余音回响</string>
    <string name="app_name_solarmax3">Solarmax3</string>
    <string name="appdownloader_button_cancel_download">取消</string>
    <string name="appdownloader_button_queue_for_wifi">排队</string>
    <string name="appdownloader_button_start_now">立即开始</string>
    <string name="appdownloader_download_percent">%1$d%%</string>
    <string name="appdownloader_download_remaining">剩余时间：%1$s</string>
    <string name="appdownloader_download_unknown_title">&lt;未命名></string>
    <string name="appdownloader_duration_hours">%1$d 小时</string>
    <string name="appdownloader_duration_minutes">%1$d 分钟</string>
    <string name="appdownloader_duration_seconds">%1$d 秒</string>
    <string name="appdownloader_label_cancel">取消</string>
    <string name="appdownloader_label_ok">确定</string>
    <string name="appdownloader_notification_download">下载</string>
    <string name="appdownloader_notification_download_complete_open">下载完成，点击打开。</string>
    <string name="appdownloader_notification_download_complete_with_install">下载完成，点击安装。</string>
    <string name="appdownloader_notification_download_complete_without_install">下载完成</string>
    <string name="appdownloader_notification_download_delete">确认要删除%1$s的下载任务吗？</string>
    <string name="appdownloader_notification_download_failed">下载失败。</string>
    <string name="appdownloader_notification_download_install">安装</string>
    <string name="appdownloader_notification_download_open">打开</string>
    <string name="appdownloader_notification_download_pause">暂停</string>
    <string name="appdownloader_notification_download_restart">重新下载</string>
    <string name="appdownloader_notification_download_resume">继续</string>
    <string name="appdownloader_notification_download_space_failed">SdCard空间不足, 下载失败。</string>
    <string name="appdownloader_notification_download_waiting_wifi">等待wifi开始下载</string>
    <string name="appdownloader_notification_downloading">正在下载</string>
    <string name="appdownloader_notification_need_wifi_for_size">文件过大，需要通过 WLAN 下载。</string>
    <string name="appdownloader_notification_paused_in_background">已在后台暂停。</string>
    <string name="appdownloader_notification_prepare">准备中</string>
    <string name="appdownloader_notification_request_btn_no">立即下载</string>
    <string name="appdownloader_notification_request_btn_yes">去设置</string>
    <string name="appdownloader_notification_request_message">为了您能在方便地在通知栏控制下载任务，请到设置中开启通知，如果不需要可直接下载</string>
    <string name="appdownloader_notification_request_title">设置</string>
    <string name="appdownloader_tip">提示</string>
    <string name="appdownloader_wifi_recommended_body">"立即开始下载此内容 (%1$s ) 可能会缩短电池的使用时间并/或导致过量使用移动数据连接流量（这可能导致移动运营商向您收费，具体取决于您的流量套餐）。

触摸“%2$s”可在下次连接到 WLAN 网络时开始下载此内容。"</string>
    <string name="appdownloader_wifi_recommended_title">稍后再加入下载队列吗？</string>
    <string name="appdownloader_wifi_required_body">"您必须使用 WLAN 完成此内容 (%1$s ) 的下载。

触摸“%2$s ”可在下次连接到 WLAN 网络时开始下载此内容。"</string>
    <string name="appdownloader_wifi_required_title">文件太大，不适于通过运营商网络下载</string>
    <string name="billing_code_con">Buy product by code</string>
    <string name="billing_code_non">By billing code(Purchase of non - expendable props)</string>
    <string name="button_text_login">Login</string>
    <string name="button_text_purchase">Buy</string>
    <string name="cancel">Cancel</string>
    <string name="change_account">Change account</string>
    <string name="change_debug_mode">change debug mode</string>
    <string name="change_screen">change the screen orientation</string>
    <string name="check_sys_account">Check whether the system login mi account</string>
    <string name="check_value">Check Value</string>
    <string name="consumable_prop_title">Purchase consumable props(can repeat)</string>
    <string name="demo_already_purchased">You have purchased, no need to buy</string>
    <string name="demo_btn_ok">Confirm</string>
    <string name="demo_choess_money">Please select the amount of recharge</string>
    <string name="demo_input_amount">Please enter the amount of recharge</string>
    <string name="demo_islogin">Executing, do not repeat operation</string>
    <string name="demo_mibi_to_rmb">1米币=1元（1 Mi Credit=RMB 1yuan）</string>
    <string name="demo_pay_amount_100yuan">100yuan(100Mi Credits)</string>
    <string name="demo_pay_amount_10yuan">10yuan(10Mi Credits)</string>
    <string name="demo_pay_amount_12yuan">120 GOLD(12Mi Credits)</string>
    <string name="demo_pay_amount_12yuan_1">Equipment(12 Mi Credit)</string>
    <string name="demo_pay_amount_1fen">1 GOLD(0.01Mi Credit)</string>
    <string name="demo_pay_amount_1fen_1">1 LUCKY COIN(0.01 Mi Credit)</string>
    <string name="demo_pay_amount_1yuan">1yuan(1Mi Credit)</string>
    <string name="demo_pay_amount_500yuan">500yuan(500Mi Credits)</string>
    <string name="demo_pay_amount_50yuan">50yuan(50Mi Credits)</string>
    <string name="demo_pay_amount_5yuan">5yuan(5Mi Credits)</string>
    <string name="demo_pay_amount_6yuan">60 GOLD(6Mi Credits)</string>
    <string name="demo_pay_amount_6yuan_1">Open all levels(6 Mi Credit)</string>
    <string name="demo_payment_cancel">Purchase cancel</string>
    <string name="demo_payment_failed">Purchase failure</string>
    <string name="demo_payment_please_login">You are not logged in, please login first</string>
    <string name="demo_payment_success">Purchase success</string>
    <string name="demo_tip"><Data>&lt;font>Now is&lt;/font>&lt;font color=#FF0000>%s&lt;/font>&lt;font>mode&lt;/font></Data></string>
    <string name="demo_tip1"><Data>&lt;font>Now：&lt;/font>&lt;font color=#FF0000>%s&lt;/font></Data></string>
    <string name="demo_tip_text">In the formal environment must indicate the relationship between Mi Credit(米币) and RMB（人民币）</string>
    <string name="demo_title">This is the application of internal payment process demo</string>
    <string name="exit">Exit</string>
    <string name="game_view_content_description">Game view</string>
    <string name="hello">这里是游戏界面</string>
    <string name="hello_world">This application for In-App Purchase process demo</string>
    <string name="in_app_friends">Friends are playing games</string>
    <string name="load_failed_retry">页面加载失败，请刷新重试！</string>
    <string name="loginSdk">登　录</string>
    <string name="login_failed">Login failed</string>
    <string name="login_mi">Login account</string>
    <string name="login_success">Login success</string>
    <string name="login_title">美峰登录</string>
    <string name="menu_settings">Settings</string>
    <string name="mi_btn_back">Back</string>
    <string name="mi_btn_bind">Bind</string>
    <string name="mi_btn_more">More</string>
    <string name="mi_btn_no">NO</string>
    <string name="mi_btn_yes">YES</string>
    <string name="mi_placeholder">Unknown</string>
    <string name="mi_text_bind_guide">游客模式下的游戏数据（包含付费数据）会在删除游戏、更换设备后清空为保障您的虚拟财产安全，以及让您获得更完善的游戏体验，我们建议您使用小米/微信/QQ登陆进行游戏。</string>
    <string name="mi_text_request">Fetching</string>
    <string name="mi_text_result_error">Connect Error</string>
    <string name="mi_text_result_failed">Failed</string>
    <string name="mi_text_result_success">Success</string>
    <string name="mi_text_result_unsupport">Unsupport</string>
    <string name="mi_text_tips">避免过度游戏损害身心健康，请合理安排游戏时间，未成年请在监护人陪同下完成。</string>
    <string name="mi_title_bind">Bind</string>
    <string name="mi_title_guide">Tips</string>
    <string name="mi_title_login">Login</string>
    <string name="mi_title_request">Purchase</string>
    <string name="migame_channel_facebook">Facebook</string>
    <string name="migame_channel_google">Google</string>
    <string name="migame_channel_platform">Platform</string>
    <string name="migame_channel_qq">QQ</string>
    <string name="migame_channel_visitor">Visitor</string>
    <string name="migame_channel_weixin">Wechat</string>
    <string name="migame_channel_xiaomi">MiPassport</string>
    <string name="migame_login_failed">Login failed</string>
    <string name="migame_login_loading">Loading</string>
    <string name="migame_login_success">Login success</string>
    <string name="migame_login_token_expired">Token expired please try login again</string>
    <string name="migame_login_visitor_failed">Visitor login failed</string>
    <string name="migame_login_visitor_success">Visitor login success</string>
    <string name="migame_pay_alipay">AliPay</string>
    <string name="migame_pay_failed">Failed/Canceled</string>
    <string name="migame_pay_googlepay">GooglePay</string>
    <string name="migame_pay_latin">LatinPay</string>
    <string name="migame_pay_mipay">MiPay</string>
    <string name="migame_pay_paying">Paying</string>
    <string name="migame_pay_success">Success</string>
    <string name="migame_pay_unknown">Can not confirm the order state</string>
    <string name="migame_pay_wepay">WePay</string>
    <string name="moments">朋友圈</string>
    <string name="non_expendable_props_des">One such props can only be purchased once</string>
    <string name="non_expendable_props_title">Purchase non-expendable props</string>
    <string name="not_login">Not Logged In</string>
    <string name="ok">OK</string>
    <string name="out_app_friends">friend not using this app</string>
    <string name="paySdk">充　值</string>
    <string name="pay_by_amount">Payment by amount</string>
    <string name="qq">QQ</string>
    <string name="qzone">QZone</string>
    <string name="reload">刷新</string>
    <string name="screen_h">screen:horizontal</string>
    <string name="screen_v">screen:vertical</string>
    <string name="search_menu_title">Search</string>
    <string name="settings">settings</string>
    <string name="wechat">微信</string>
    <string name="weibo">微博</string>
</resources>